adding a server, changing the authorization logic (character check/entity check/entity addition)

--- a/src/components/Input/styles.sass
+++ b/src/components/Input/styles.sass
@@ -98,6 +98,10 @@
       background: url("../../assets/images/eye.svg") center center no-repeat
       background-size: 100%
 
+    &.rolling
+      right: 10px
+      transform: translateY(-50%) rotate(360deg)
+
     &:hover
       transform: translateY(-50%) scale(1.25)
       background: url("../../assets/images/eye-color-idle.svg") center center no-repeat
