--- a/src/pages/SignInPage/styles.sass
+++ b/src/pages/SignInPage/styles.sass
@@ -1,4 +1,5 @@
 @import "Styles/variables"
+@import "Styles/mixins"
 
 .loading
   position: absolute
@@ -30,15 +31,13 @@
 
 
 .sign-in-page
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
+  +center-block()
   width: 400px
   padding: 25px
   background: var(--color-background)
   border-radius: $border-radius-primary
   overflow: hidden
+  +anim-op-sc(0, .25s, 0, .25s)
 
 
   > .title
