--- a/src/styles/_cssvariables.sass
+++ b/src/styles/_cssvariables.sass
@@ -5,3 +5,9 @@
   --color-surface: #222222
   --color-background: #181818
   --color-background-tick: #df45dfa3
+  --color-surface-dark: #161616
+  --color-primary-hitting: #2e2e2e
+  --color-primary-push: #353535
+
+[dark-theme]
+  --color-surface: #FFFFFF
