--- a/src/index.sass
+++ b/src/index.sass
@@ -4,10 +4,10 @@
 
 #root
   width: 100vw
-  height: 100vh
+  min-height: 100%
   position: absolute
   inset: 0
-  overflow: hidden
   z-index: 0
+  overflow-x: hidden
   background: var(--color-surface)
   font-family: Montserrat, sans-serif
