--- a/src/styles/_reset.sass
+++ b/src/styles/_reset.sass
@@ -13,3 +13,6 @@ input
   font-family: inherit
   font-weight: inherit
   color: black
+
+a:hover, a:visited, a:link, a:active
+  text-decoration: none
