--- a/src/styles/mixins/_center-block.sass
+++ b/src/styles/mixins/_center-block.sass
@@ -1,5 +1,9 @@
 =center-block()
   position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
+  top: 0
+  left: 0
+  width: 100%
+  display: flex
+  height: 100%
+  justify-content: center
+  align-items: center
