--- a/src/components/Header/styles.sass
+++ b/src/components/Header/styles.sass
@@ -75,6 +75,7 @@
     display: flex
     justify-content: center
     align-items: center
+    cursor: pointer
 
     > .theme
       transition: all .25s ease
