--- a/src/components/Post/styles.sass
+++ b/src/components/Post/styles.sass
@@ -19,7 +19,8 @@
 
   > .title
     font-size: 20px
-    font-weight: 500
+    font-weight: 600
+    color: white
 
   > .description
     margin-top: 10px
@@ -44,13 +45,13 @@
         height: 25px
         background: red
 
-    > .images
-      position: relative
+    //> .images
+    //  position: relative
+    //  display: flex
+    //  width: 100%
+    //  transition: right .25s ease
+
+    > img
       display: flex
       width: 100%
-      transition: right .25s ease
-
-      > img
-        display: flex
-        width: 100%
-        height: auto
+      height: 20%
