--- a/src/styles/_cssvariables.sass
+++ b/src/styles/_cssvariables.sass
@@ -9,5 +9,8 @@
   --color-primary-hitting: #2e2e2e
   --color-primary-push: #353535
 
+  --color-secondary-hitting: #b269b2
+
+
 [white-theme]
   --color-surface: #FFFFFF
