--- a/src/components/Button/styles.sass
+++ b/src/components/Button/styles.sass
@@ -11,11 +11,30 @@
   cursor: pointer
   transition: background .25s ease, color .25s ease, opacity .25s ease
   border-radius: $border-radius-primary
-  color: var(--color-text-primary)
 
-  &:hover
-    background: var(--color-primary)
+  &.type-0
+    color: var(--color-text-primary)
+
+    &:hover
+      background: var(--color-primary)
+      color: black
+
+    &:active
+      opacity: 0.8
+
+  &.type-1, &.type-2
     color: black
+    background: var(--color-primary)
+    font-weight: 600
+    height: 50px
+    border-radius: 20px
 
-  &:active
-    opacity: 0.8
+    &:hover
+      background: var(--color-secondary-hitting)
+
+    &:active
+      opacity: 0.8
+
+  &.type-2
+    height: 40px
+    border-radius: $border-radius-primary
