--- a/src/components/Input/styles.sass
+++ b/src/components/Input/styles.sass
@@ -150,8 +150,18 @@
       box-sizing: border-box
       border: 3px solid var(--color-primary)
 
-  &.search
+  &.no-anim
+    > input
+      &:focus ~ .placeholder,
+      &:not(:placeholder-shown) ~ .placeholder
+        opacity: 0
+        transform: translateY(-50%)
+        font-size: 14px
 
+  &.text-area
+    height: 200px
+
+  &.search
     > .placeholder
       left: 60px
 
