--- a/src/components/Modal/styles.sass
+++ b/src/components/Modal/styles.sass
@@ -2,51 +2,59 @@
 @import "Styles/mixins"
 
 .modal-overlay
-  +center-block()
+  position: fixed
+  width: 100%
+  height: 100%
   background: rgba(0, 0, 0, 0.5)
+  backdrop-filter: blur(2px)
   z-index: 9999
 
-  > .modal
-    width: 500px
-    pointer-events: auto
-    background: var(--color-background)
-    display: flex
-    flex-direction: column
-    border-radius: 15px
-    padding: 20px
+  > .inner
+    +center-block()
 
-    > .content
-      margin-top: 20px
-      color: var(--color-text-primary)
-
-      > .label
-        > .description
-          font-size: 14px
-          margin-block: 10px
-
-    > .line
+    > .modal
+      width: 500px
+      pointer-events: auto
+      background: var(--color-background)
       display: flex
-      align-items: center
+      flex-direction: column
+      border-radius: 15px
+      padding: 20px
 
-      > .title
-        font-size: 20px
-        font-weight: 600
-        color: white
+      > .content
+        margin-top: 20px
+        color: var(--color-text-primary)
 
-      > .modal-close-btn
-        position: relative
-        margin-left: auto
-        width: 30px
-        height: 30px
-        transition: background .25s ease
-        border-radius: 6px
+        > .label
+          > .description
+            font-size: 14px
+            margin-block: 10px
 
-        > .icon
-          position: absolute
-          width: 100%
-          height: 100%
-          background: url("../../assets/images/close.svg") center no-repeat
-          background-size: 100%
+      > .line
+        display: flex
+        align-items: center
 
-        &:hover
-          background: var(--color-primary-hitting)
+        > .title
+          font-size: 20px
+          font-weight: 600
+          color: white
+
+        > .modal-close-btn
+          position: relative
+          margin-left: auto
+          width: 30px
+          height: 30px
+          transition: background .25s ease
+          border-radius: 6px
+          cursor: pointer
+
+          > .icon
+            position: absolute
+            width: 100%
+            height: 100%
+            background: url("../../assets/images/close.svg") center no-repeat
+            background-size: 100%
+
+
+          &:hover
+            background: var(--color-primary-hitting)
