--- a/src/pages/styles.sass
+++ b/src/pages/styles.sass
@@ -27,9 +27,11 @@
   > .footer
     margin-top: 20px
 
-.post-page
+.post-page, .post-page-edit
   +center-block()
+  align-items: normal
   position: static
+  height: auto
 
   > .content
     width: 900px
@@ -47,3 +49,188 @@
       color: white
       font-weight: 600
       font-size: 24px
+
+    > .post-data
+      display: flex
+      justify-content: space-between
+      align-items: center
+      font-size: 14px
+      font-weight: 600
+
+      > .author, .date
+        display: flex
+        justify-content: center
+        align-items: center
+
+        > .icon
+          width: 20px
+          height: 20px
+          margin-right: 10px
+
+    > .label
+      > .description
+        font-size: 14px
+        margin-block: 10px
+
+    > .img
+      max-width: 100% /* Максимальная ширина изображения равна ширине родительского контейнера */
+      height: auto /* Автоматическое подстройка высоты под ширину */
+
+    > .footer
+      display: flex
+      gap: 20px
+
+      > .btn-container
+        width: 100%
+        &.square
+          width: 50px
+          height: 50px
+
+.dialogs-page
+  +center-block()
+  position: static
+  align-items: flex-start
+
+  > .dialogs
+    width: 800px
+    pointer-events: auto
+    background: var(--color-background)
+    overflow: hidden
+    margin-top: 30px
+    border-radius: $border-radius-primary
+    min-height: 500px
+
+    > .title
+      font-size: 24px
+      font-weight: 600
+      color: var(--color-text-primary)
+      text-align: center
+      margin-top: 20px
+
+    > .dialogs-list
+      padding: 20px
+      display: flex
+      flex-direction: column
+      gap: 20px
+
+      > a
+
+        > .dialog
+          height: 80px
+          background: #212121
+          border-radius: $border-radius-primary
+          outline: 1px solid rgba(107, 107, 107, 0.3)
+          display: flex
+          align-items: center
+          padding: 15px 15px 15px 30px
+          cursor: pointer
+          transition: background .25s ease
+
+          > .avatar
+            width: 50px
+            height: 50px
+            overflow: hidden
+
+            border-radius: 50%
+
+            > .inner
+              background: var(--color-primary)
+              width: 100%
+              height: 100%
+
+          > .personal-dialog
+            margin-left: 30px
+            color: var(--color-text-primary )
+
+            > .name
+              font-weight: 600
+              font-size: 20px
+
+            > .preview
+              margin-top: 5px
+
+          &:hover
+            background: #2a2a2a
+
+          &:active
+            background: transparent
+
+.messages-page
+  +center-block()
+  position: static
+  align-items: flex-start
+
+  > .messages
+    width: 800px
+    pointer-events: auto
+    background: var(--color-background)
+    overflow: hidden
+    margin-top: 30px
+    border-radius: $border-radius-primary
+    min-height: 500px
+
+    > .title
+      font-size: 24px
+      font-weight: 600
+      color: var(--color-text-primary)
+      text-align: center
+      margin-top: 20px
+
+    > .messages-list
+      padding: 20px
+      display: flex
+      flex-direction: column
+      gap: 20px
+
+      > a
+
+        > .message
+          width: max-content
+          height: 80px
+          background: #212121
+          border-radius: $border-radius-primary
+          outline: 1px solid rgba(107, 107, 107, 0.3)
+          display: flex
+          align-items: center
+          padding: 15px 15px 15px 30px
+          cursor: pointer
+          transition: background .25s ease
+
+          &.left
+            margin-left: 0
+
+          &.right
+            margin-left: auto
+
+          > .avatar
+            width: 35px
+            height: 35px
+            overflow: hidden
+
+            border-radius: 50%
+
+            > .inner
+              background: var(--color-primary)
+              width: 100%
+              height: 100%
+
+          > .personal-message
+            margin-left: 30px
+            color: var(--color-text-primary )
+
+            > .name
+              font-weight: 600
+              font-size: 16px
+
+            > .preview
+              font-size: 14px
+              margin-top: 5px
+
+          &:hover
+            background: #2a2a2a
+
+          &:active
+            background: transparent
+
+    > .input__wrapper
+      margin: 20px
